@@ -1090,3 +1090,6 @@
 	  no one has been using this port.
 
 5.4 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
+
+	* include/nuttx/lcd.h - Defines an LCD interface.
+
